finished Contact form Project.

--- a/Project 4 - Contact Form/index.html
+++ b/Project 4 - Contact Form/index.html
@@ -58,11 +58,11 @@
         <div class="contact-info">
           <div class="info-item">
             <i class="fas fa-map-marker-alt"></i>
-            <span>123 Main Street, City, Country</span>
+            <span>Sandkamp 7, Glinde, Germany</span>
           </div>
           <div class="info-item">
             <i class="fas fa-envelope"></i>
-            <span>contact@example.com</span>
+            <span>contact@deinemutter.com</span>
           </div>
 
           <div class="info-item">
