finished last 2 projects

--- a/Project 5 - Pricing Cards/index.html
+++ b/Project 5 - Pricing Cards/index.html
@@ -30,7 +30,7 @@
             <h3>Basic</h3>
             <div class="price">
               <span class="currency">$</span>
-              <span class="amount">9</span>
+              <span class="amount">8.99</span>
               <span class="period">/month</span>
             </div>
             <p class="description">Perfect for individuals and small projects</p>
@@ -62,7 +62,7 @@
             <h3>Pro</h3>
             <div class="price">
               <span class="currency">$</span>
-              <span class="amount">29</span>
+              <span class="amount">29.99</span>
               <span class="period">/month</span>
             </div>
             <p class="description">Great for growing businesses and teams</p>
@@ -70,9 +70,9 @@
 
           <div class="card-body">
             <ul class="features">
-              <li><i class="fas fa-check"></i> 5 Projects</li>
-              <li><i class="fas fa-check"></i> 20GB Storage</li>
-              <li><i class="fas fa-check"></i> Basic Support</li>
+              <li><i class="fas fa-check"></i> 15 Projects</li>
+              <li><i class="fas fa-check"></i> 60GB Storage</li>
+              <li><i class="fas fa-check"></i> Better Support</li>
               <li><i class="fas fa-check"></i> Email Notifications</li>
               <li><i class="fas fa-check"></i> Advanced Analytics</li>
               <li class="disabled"><i class="fas fa-times"></i> Custom Domain</li>
@@ -93,7 +93,7 @@
             <h3>Enterprise</h3>
             <div class="price">
               <span class="currency">$</span>
-              <span class="amount">79</span>
+              <span class="amount">79.99</span>
               <span class="period">/month</span>
             </div>
             <p class="description">For large companies and organizations</p>
@@ -101,11 +101,12 @@
 
           <div class="card-body">
             <ul class="features">
-              <li><i class="fas fa-check"></i> 5 Projects</li>
-              <li><i class="fas fa-check"></i> 20GB Storage</li>
-              <li><i class="fas fa-check"></i> Basic Support</li>
+              <li><i class="fas fa-check"></i> 50+ Projects</li>
+              <li><i class="fas fa-check"></i> 100GB Storage</li>
+              <li><i class="fas fa-check"></i> Best Support</li>
               <li><i class="fas fa-check"></i> Email Notifications</li>
               <li><i class="fas fa-check"></i> Advanced Analytics</li>
+              <li><i class="fas fa-check"></i> 10% Free Shares</li>
               <li><i class="fas fa-check"></i> Custom Domain</li>
             </ul>
           </div>
@@ -126,10 +127,10 @@
 
           <div class="author">
             <div class="avatar">
-              <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Customer" />
+              <img src="https://randomuser.me/api/portraits/men/43.jpg" alt="Customer" />
             </div>
             <div class="info">
-              <h4>Sarah Johnson</h4>
+              <h4>Mark Johnson</h4>
               <p>Marketing Director</p>
             </div>
           </div>
